--- a/src/style.scss
+++ b/src/style.scss
@@ -44,7 +44,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-position: 50% 50%;
+    background-position: center;
     background-repeat: repeat;
     background-attachment: scroll;
   }
@@ -67,7 +67,6 @@ body {
       background-attachment: scroll;
   }
 }
-
 
 .index-background {
   background-image: url('https://images.unsplash.com/photo-1447175008436-054170c2e979?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2061&q=80');
