--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 $family-primary: 'Walter Turncoat', cursive;
 $family-secondary: 'Roboto', sans-serif;
 $title-color: #FFFFFF;
+$subtitle-color: #FFFFFF;
 $navbar-background-color: rgba(47,79,79, 1);
 $navbar-item-color: #FFFFFF;
 $box-color: #FFFFFF;
@@ -66,6 +67,14 @@ body {
       background-size: cover;
       background-attachment: scroll;
   }
+}
+
+h3.subtitle.is-size-3 {
+  margin: 0;
+}
+
+.before-control {
+  margin-bottom: 8px;
 }
 
 .index-background {
@@ -421,6 +430,15 @@ canvas.mapboxgl-canvas {
 
 table.table {
   border-radius: 5px;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.help {
+  color: 	#00FFFF;
 }
 
 @keyframes up {
